# airflow-mlflow

./: .dockerignore  .env.dev  .env.prod  .env.template  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Dockerfile.airflow.dev  Dockerfile.dev  Dockerfile.mlflow  LICENSE  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  down.sh  pip.conf  requirements-airflow.txt  requirements-common.txt  requirements-dev.txt  requirements-dockerfile.txt  requirements.txt  startup.sh  test_mlflow.py  up.sh
.github/workflows/: build-publish.yml
airflow/: webserver_config.py
airflow/dags/: experiment1_dag.py  experiment2_dag.py  notebook.ipynb  notebook_dag.py
dags/: notebook.ipynb  notebook_dag.py  pims_dag.py
dags/common/: experiment.py
dags_common/: pyproject.toml  requirements-dev.txt
dev/: dag.py
experiments/: .git_hash  experiment1_dag.py
experiments/common/: experiment.py
experiments/dev/: .git_hash  changes.py  common.py  dag.py  dev.py  doei.py  ja.py  mooi.py
experiments/dev/subtest/: dag.py  subtest.py
experiments/mnist/: dag.py  mnist.ipynb  mnist.py
git_sync/: write_git_hash.sh
postgres/: init-airflow-db.sh
postgres/init/: init-airflow-db.sh  init-mlflow-db.sh
